src/objects/MetroclientAccountProductGeography__c.object
<CustomObject>
    <description>Metrostudy Provisioning - Account Level.  Populated when a quote is sent to Z-billing.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Metrostudy Account Product Geographies</relationshipLabel>
        <relationshipName>MetroclientAccountProductGeographies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargeNumber__c</fullName>
        <description>Zuora Subscription Charge Number</description>
        <externalId>true</externalId>
        <inlineHelpText>Subscription Charge Number (Zuora)</inlineHelpText>
        <label>Charge Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge</label>
        <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
        <relationshipLabel>Metrostudy Account Product Geographies</relationshipLabel>
        <relationshipName>Metrostudy_Account_Product_Geographies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subscription is no longer active and product cannot be accessed. Record exists for reference only.</description>
        <inlineHelpText>When checked, product cannot be accessed. Record exists for reference only.</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Date the subscription ends  (SubscriptionEndDate).  This value is blank (NULL) for evergreen subscriptions.</description>
        <inlineHelpText>The date access to the product expires and can no longer be accessed.  This field is blank when a subscription is evergreen.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FC_Charge_Type__c</fullName>
        <formula>TEXT(Charge__r.Zuora__Type__c)</formula>
        <label>(FC) Charge Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_One_If_Active__c</fullName>
        <formula>IF(Status__c == &quot;Active&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) One If Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_One_If_Future__c</fullName>
        <formula>IF(Status__c == &quot;Future&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) One If Future</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Ultimate_Parent_Account_Synced__c</fullName>
        <formula>(ISBLANK(Account__r.ParentId) &amp;&amp; FC_Ultimate_Parent_Account__c == Account__c) ||
(!ISBLANK(Account__r.ParentId) &amp;&amp; FC_Ultimate_Parent_Account__c ==  Account__r.FC_Ultimate_Parent_Account__c)</formula>
        <label>(FC) Ultimate Parent Account Synced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Ultimate_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(FC) Ultimate Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Metrostudy Account Product Geographies ((FC) Ultimate Parent Account)</relationshipLabel>
        <relationshipName>Metrostudy_Account_Product_Geographies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Account_Name__c</fullName>
        <formula>Account__r.Full_Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hip_Customer_Key_Temp_DNU__c</fullName>
        <description>Temporary field for Data Migration.  Hip Customer Key</description>
        <label>Hip Customer Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetroclientProductGeography__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Geography</label>
        <referenceTo>MetroclientProductGeography__c</referenceTo>
        <relationshipLabel>Metrostudy Account Product Geographies</relationshipLabel>
        <relationshipName>MetroclientAccountProductGeographies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metroclient_cl_prod_id_TEMP_DNU__c</fullName>
        <description>DNU - for migration only</description>
        <inlineHelpText>For migration from Metroclient.  DNU.</inlineHelpText>
        <label>Metroclient Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product is On Hold. It has not been removed but we are preventing access to the product temporarily.  Generally, this is used because of non-payment.</description>
        <inlineHelpText>Check box to put product access on hold.  Products on hold cannot be accessed until taken off hold.</inlineHelpText>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manual override.  When this box is checked, the job that updates this object based on the subscriptions from Zuora will ignore this record and not update it.  To be used when the Start Date, End Date or Deleted status need to be Manually overridden.
Check box when a manual override is required. Start Date, End Date, and/or Delete status has been manually overridden and should not be updated based on the subscription dates/status in Zuora.</description>
        <inlineHelpText>When checked, a manual override for this record is in effect.</inlineHelpText>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RemovalAmendment__c</fullName>
        <description>Name of Removal Amendment that removed a product.  Products can be removed without a Removal Amendment if the subscription simply expired or was cancelled.  Products that are not in Subscription &amp; Charges object AND don&apos;t have a Removal Amendment should have the delete flag turned on.</description>
        <label>Removal Amendment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seg2__c</fullName>
        <formula>Charge__r.Segment2__c</formula>
        <label>Seg2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Date that the subscription starts (SubscriptionStartDate)</description>
        <inlineHelpText>The date that the access to the product starts.  This date is determined by the subscription or amendment start date.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status can be Active, Future, Expired, On Hold</description>
        <formula>IF(Deleted__c  = True, &apos;Expired&apos;, 
  IF(EndDate__c &lt;   TODAY(), &apos;Expired&apos;, 
    IF(OnHold__c = True, &apos;On Hold&apos;,
    IF(StartDate__c &gt;  TODAY() , &apos;Future&apos;,

&apos;Active&apos;
)
)
)
)</formula>
        <inlineHelpText>Active, Future, Expired, or On Hold</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionName__c</fullName>
        <description>Zuora Subscription Name</description>
        <externalId>true</externalId>
        <inlineHelpText>Subscription Name (Zuora)</inlineHelpText>
        <label>Subscription Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Term_Type__c</fullName>
        <label>Subscription Term Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Metrostudy Account Product Geography</label>
    <listViews>
        <fullName>Active_Provisioning</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ChargeNumber__c</columns>
        <columns>MetroclientProductGeography__c</columns>
        <columns>Status__c</columns>
        <columns>Override__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Deleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>Metrostudy,Hanley</value>
        </filters>
        <label>Status =  Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_ProvisioningMembership</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ChargeNumber__c</columns>
        <columns>MetroclientProductGeography__c</columns>
        <columns>Status__c</columns>
        <columns>Override__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Deleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>Metrostudy,Hanley</value>
        </filters>
        <filters>
            <field>MetroclientProductGeography__c</field>
            <operation>contains</operation>
            <value>Membership</value>
        </filters>
        <label>Status =  Active Membership</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_ProvisioningRRI</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 6 AND 7 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>MetroclientProductGeography__c</columns>
        <columns>Status__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Deleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>Metrostudy,Hanley</value>
        </filters>
        <filters>
            <field>MetroclientProductGeography__c</field>
            <operation>contains</operation>
            <value>RRI</value>
        </filters>
        <filters>
            <field>MetroclientProductGeography__c</field>
            <operation>contains</operation>
            <value>Remodeling</value>
        </filters>
        <filters>
            <field>MetroclientProductGeography__c</field>
            <operation>notContain</operation>
            <value>Membership</value>
        </filters>
        <filters>
            <field>MetroclientProductGeography__c</field>
            <operation>notContain</operation>
            <value>Insight</value>
        </filters>
        <label>Status =  Active RRI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_ProvisioningRRICBSA</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 6 AND 7 AND 8 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ChargeNumber__c</columns>
        <columns>MetroclientProductGeography__c</columns>
        <columns>Status__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Deleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>Metrostudy,Hanley</value>
        </filters>
        <filters>
            <field>MetroclientProductGeography__c</field>
            <operation>contains</operation>
            <value>RRI</value>
        </filters>
        <filters>
            <field>MetroclientProductGeography__c</field>
            <operation>contains</operation>
            <value>Remodeling</value>
        </filters>
        <filters>
            <field>MetroclientProductGeography__c</field>
            <operation>notContain</operation>
            <value>Membership</value>
        </filters>
        <filters>
            <field>MetroclientProductGeography__c</field>
            <operation>notContain</operation>
            <value>Insight</value>
        </filters>
        <filters>
            <field>MetroclientProductGeography__c</field>
            <operation>notContain</operation>
            <value>United States</value>
        </filters>
        <label>Status =  Active RRI (CBSA)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>MetroclientProductGeography__c</columns>
        <columns>Status__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Emergency_Provisioning</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ChargeNumber__c</columns>
        <columns>MetroclientProductGeography__c</columns>
        <columns>Status__c</columns>
        <columns>Override__c</columns>
        <columns>EndDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Override__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Deleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>Metrostudy,Hanley,Test,Yahara</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Future,Active</value>
        </filters>
        <label>Emergency Provisioning (Active)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Emergency_ProvisioningExpired</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ChargeNumber__c</columns>
        <columns>MetroclientProductGeography__c</columns>
        <columns>Status__c</columns>
        <columns>Override__c</columns>
        <columns>EndDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Metroclient_cl_prod_id_TEMP_DNU__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Override__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Deleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>Metrostudy,Hanley</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Future,Active</value>
        </filters>
        <label>Emergency Provisioning (Expired)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Future_Provisioning</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ChargeNumber__c</columns>
        <columns>MetroclientProductGeography__c</columns>
        <columns>Status__c</columns>
        <columns>Override__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Future</value>
        </filters>
        <filters>
            <field>Deleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>Metrostudy,Hanley</value>
        </filters>
        <label>Status =  Future</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Status_On_Hold</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>MetroclientProductGeography__c</columns>
        <columns>OnHold__c</columns>
        <columns>SubscriptionName__c</columns>
        <columns>ChargeNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Hold</value>
        </filters>
        <label>Status = On Hold</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrostudy Account Product Geographies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>